--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,25 @@
 #root {
-  font-family: Avenir,Helvetica,Arial,sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  color: #2c3e50;
+    font-family: Avenir, Helvetica, Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-align: center;
+    color: #2c3e50;
 }
+
 * {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
+
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
+
 div {
-  display: block;
+    display: block;
 }
-input{border:none;outline:medium;}
+
+input {
+    border: none;
+    outline: medium;
+}
