--- a/src/css/apph5.module.css
+++ b/src/css/apph5.module.css
@@ -1,14 +1,10 @@
 .App {
-    margin: 40px auto;
-    padding: 50px;
-    /*width: 1000px;*/
-    /*height: 818px;*/
+    margin: 0 auto;
+    width: 100vw;
     background: #fff;
     box-shadow: 0 0 32px rgb(0 0 0 / 5%);
     border: 1px solid transparent;
     opacity: 1;
-    margin-left: 15vw;
-    margin-right: 15vw;
 }
 .title>div:nth-child(2){
     cursor: pointer;
@@ -23,8 +19,10 @@
     text-align: center;
 }
 .title {
+    width: 100%;
+    height: 60px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
 .title>div:first-child{
@@ -49,6 +47,7 @@
 
 .pay {
     margin-top: 34px;
+    padding: 0 10px;
 }
 .payMtd{
     margin: 0;
@@ -134,6 +133,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    flex-flow: row wrap;
 }
 .default>div>div:nth-child(2):not(.numList)>div:first-child{
     box-sizing: border-box;
@@ -244,6 +244,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    flex-flow: row wrap;
 }
 .numList>div:nth-child(2)>div:first-child{
     box-sizing: border-box;
@@ -305,13 +306,13 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 500px;
-    height: 288px;
+    width: 300px;
+    height: 300px;
     margin-top: -180px;
-    margin-left: -250px;
+    margin-left: -150px;
     border-radius: 10px;
     background: #fff;
-    padding: 20px 50px;
+    padding: 15px 20px;
 }
 .popup>div:first-child{
     text-align: left;
@@ -341,10 +342,10 @@
 }
 .popup>div:nth-child(3)>div{
     cursor: pointer;
-    width: 190px;
-    height: 50px;
+    width: 100px;
+    height: 40px;
     text-align: center;
-    line-height: 50px;
+    line-height: 40px;
     font-size: 16px;
     font-weight: 400;
     color: #333;
