--- a/src/css/order.module.css
+++ b/src/css/order.module.css
@@ -63,3 +63,91 @@
 .record table>tbody>tr:nth-child(n+2){
     background: #fff;
 }
+.mask{
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(0,0,0,.5);
+}
+.popup{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 500px;
+    height: 288px;
+    margin-top: -180px;
+    margin-left: -250px;
+    border-radius: 10px;
+    background: #fff;
+    padding: 20px 50px;
+}
+.popup>div:first-child{
+    text-align: left;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 25px;
+    color: #333;
+}
+.popup>div:nth-child(2){
+    margin-top: 15px;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 22px;
+    color: #333;
+    text-align: left;
+}
+.popup>div:nth-child(2)>img{
+    width: 20px;
+    height: 20px;
+    vertical-align: bottom;
+}
+.popup>div:nth-child(3){
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.popup>div:nth-child(3)>div{
+    cursor: pointer;
+    width: 190px;
+    height: 50px;
+    text-align: center;
+    line-height: 50px;
+    font-size: 16px;
+    font-weight: 400;
+    color: #333;
+    background: #fff;
+    border: 1px solid #d8dce7;
+    border-radius: 6px;
+}
+.popup>div:nth-child(3)>div:nth-child(2){
+    color: #fff;
+    background: linear-gradient(90deg,#ff7c27,#ff3e13);
+}
+.popup>div:nth-child(4){
+    cursor: pointer;
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    width: 20px;
+    height: 20px;
+    transition: all .3s;
+}
+.popup>div:nth-child(4)>img{
+    width: 100%;
+    height: 100%;
+}
+.maskHide{
+    width: 0;
+    height: 0;
+    overflow: hidden;
+    display: block;
+}
+.popupHide{
+    width: 0;
+    height: 0;
+    overflow: hidden;
+    display: block;
+}
