--- a/src/css/apph5.module.css
+++ b/src/css/apph5.module.css
@@ -382,3 +382,12 @@
     overflow: hidden;
     display: block;
 }
+.logo{
+    height: 108px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.logo>img{
+    height: 100%;
+}
